# HoyoUMU

./: Cargo.toml  README.md  build.rs  install.sh  shell.nix  uninstall.sh  update_proton.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
assets/: Hoyoplay.desktop  Hoyoplay_gamemode.desktop  hoyoumu.py  umu_config.toml
scripts/: check_umu.sh  download_hoyoplay.sh  gamemode.sh  kill_genshin.sh  proton_ge_downloader_and_updater.sh  valve_proton_downloader_and_updater.sh
src/: main.rs
src/actions/: buttons_actions.rs
src/helpers/: check_app.rs  github_api.rs  mod.rs
src/system/: create_desktop_file.rs  create_protonfixes.rs  download_hoyoplay.rs  download_icon.rs  download_proton_ge.rs  file_and_dirs.rs  github_api.rs  hoyoplay.rs  mod.rs  proton_ge.rs  run_hoyoplay_setup.rs  setup_rps.rs  umu.rs
src/ui/: manage_pe.rs  mod.rs  pages.rs  persistent_elements.rs  style.rs
