[package]
name = "hoyoumu"
version = "0.1.6"
edition = "2024"

[profile.dev]
incremental = true
panic = "abort"


[profile.release]
incremental = false
panic = "abort"

[dependencies]
fontconfig = "0.10.0"
sdl3 = { version = "0.16.4", features = ["build-from-source", "ttf"] }
rust_page_system = "0.3.9"
lazy_static = "1.5.0"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tar = "0.4.44"
flate2 = "1.1.5"
bytes = "1.11.0"
indoc = "2.0.7"
include_dir = "0.7.4"
chrono = "0.4.42"
